# filament-java

./: .gitignore  README.md  build.gradle.kts  filament-java-brief.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
examples/hello-camera/: build.gradle.kts
examples/hello-camera/src/main/java/dev/everydaythings/filament/examples/: HelloCamera.java
examples/hello-gltf/: build.gradle.kts
examples/hello-gltf/src/main/java/dev/everydaythings/filament/examples/: HelloGltf.java
examples/hello-picking/: build.gradle.kts
examples/hello-picking/src/main/java/dev/everydaythings/filament/examples/: HelloPicking.java
examples/hello-picking/src/main/resources/materials/: lit_color.filamat
examples/hello-text/: build.gradle.kts
examples/hello-text/src/main/java/dev/everydaythings/filament/examples/: HelloText.java
examples/hello-triangle/: build.gradle.kts
examples/hello-triangle/src/main/java/dev/everydaythings/filament/examples/: HelloTriangle.java
examples/hello-triangle/src/main/resources/materials/: baked_color.filamat
filament-java-core/: build.gradle.kts
filament-java-core/src/main/java/dev/everydaythings/filament/: Asserts.java  Box.java  BufferObject.java  Camera.java  ColorGrading.java  Colors.java  DesktopPlatform.java  Engine.java  Entity.java  EntityInstance.java  EntityManager.java  Fence.java  Filament.java  IndexBuffer.java  IndirectLight.java  LightManager.java  Material.java  MaterialInstance.java  MathUtils.java  MorphTargetBuffer.java  NativeSurface.java  NioUtils.java  Platform.java  RenderTarget.java  RenderableManager.java  Renderer.java  Scene.java  SkinningBuffer.java  Skybox.java  Stream.java  SurfaceOrientation.java  SwapChain.java  SwapChainFlags.java  Texture.java  TextureSampler.java  ToneMapper.java  TransformManager.java  VertexBuffer.java  View.java  Viewport.java
filament-java-core/src/main/java/dev/everydaythings/filament/proguard/: UsedByNative.java  UsedByReflection.java
filament-java-gltfio/: build.gradle.kts
filament-java-gltfio/src/main/java/dev/everydaythings/filament/gltfio/: Animator.java  AssetLoader.java  FilamentAsset.java  FilamentInstance.java  Gltfio.java  MaterialProvider.java  ResourceLoader.java  UbershaderProvider.java
filament-java-lwjgl/: build.gradle.kts
filament-java-lwjgl/src/main/java/dev/everydaythings/filament/lwjgl/: package-info.java
filament-java-native/: build.gradle.kts
filament-java-native/src/main/cpp/: BufferObject.cpp  CMakeLists.txt  Camera.cpp  ColorGrading.cpp  Colors.cpp  Engine.cpp  EntityManager.cpp  Fence.cpp  IndexBuffer.cpp  IndirectLight.cpp  LightManager.cpp  Material.cpp  MaterialInstance.cpp  MathUtils.cpp  MorphTargetBuffer.cpp  NativeSurface.cpp  RenderTarget.cpp  RenderableManager.cpp  Renderer.cpp  Scene.cpp  SkinningBuffer.cpp  SkyBox.cpp  Stream.cpp  SurfaceOrientation.cpp  SwapChain.cpp  Texture.cpp  TextureSampler.cpp  ToneMapper.cpp  TransformManager.cpp  VertexBuffer.cpp  View.cpp
filament-java-native/src/main/cpp/common/: NioUtils.cpp
filament-java-native/src/main/cpp/gltfio/: Animator.cpp  AssetLoader.cpp  FilamentAsset.cpp  FilamentInstance.cpp  MaterialKey.cpp  MaterialKey.h  ResourceLoader.cpp  UbershaderProvider.cpp
filament-java-native/src/main/cpp/nativewindow/: Desktop.cpp
filament-java-native/src/main/java/dev/everydaythings/filament/loader/: NativeLoader.java  package-info.java
filament-java-text/: build.gradle.kts
filament-java-text/src/main/java/dev/everydaythings/filament/text/: ColrGlyphInfo.java  CylindricalTextSurface.java  FlatTextSurface.java  MsdfAtlas.java  MsdfFontManager.java  MsdfTextRenderer.java  SphericalTextSurface.java  TextMesh.java  TextMeshBuilder.java  TextSurface.java  package-info.java
filament-java-text/src/main/resources/materials/: flat_color.filamat  flat_color.mat  msdf_text.filamat  msdf_text.mat
materials/: baked_color.mat  lit_color.mat
